--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,81 @@
 header {
-    height: 100vh;
+    height: 130vh;
     padding: 7rem;
     overflow: hidden;
+}
+
+.header__container{
+    text-align: center;
+    height: 100%;
+    position: relative;
+}
+
+/* ========= CTA ========== */
+
+.cta {
+    margin-top: 2rem;
+    display: flex;
+    gap: 1.2rem;
+    justify-content: center;
+}
+
+.header__socials {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    left: 0;
+    bottom: 0rem;
+    gap: 0.8rem;
+}
+
+.header__socials::hover {
+    content: "";
+    width: 1px;
+    height: 2rem;
+    background: var(--color-primary);
+}
+
+/* ========= ME ========== */
+
+.me {
+    background: linear-gradient(var(--color-primary), transparent);
+    width: 20rem;
+    height: 30rem;
+    position: absolute;
+    left: calc(50% - 7rem);
+    margin-top: 4rem;
+    border-radius: 12rem 12rem 0 0;
+    overflow: hidden;
+    padding: 4rem 0rem 0rem 0rem;
+}
+
+/* ======== SCROLL DOWN ========== */
+
+.scroll__down {
+    position: absolute;
+    right: -2.3rem;
+    bottom: 2rem;
+    transform: rotate(90deg);
+    font-weight: 300;
+    font-size: 0.9rem;
+}
+
+/* =============== MEDIA QUERIES (MEDIUM DEVICES) ================= */
+@media screen and (max-width: 1024px) {
+    header{
+        height: 90vh;
+    }
+}
+
+/* =============== MEDIA QUERIES (SMALL DEVICES) ================= */
+@media screen and (max-width: 600px) {
+    header {
+        height: 130vh;
+    }
+    
+    .header__socials,
+    .scroll__down {
+        display: none;
+    }
 }
